feat(user): 增加查询单个用户信息接口
